[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" uid="uid://lun7iyf6nhym" path="res://data/themes/ui_theme.tres" id="1_dwn3r"]
[ext_resource type="Script" path="res://ui/video_settings_menu/video_settings_menu.gd" id="1_j3gmf"]

[node name="VideoSettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dwn3r")
script = ExtResource("1_j3gmf")
metadata/_edit_horizontal_guides_ = [-870.0]

[node name="FOVContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -511.0
offset_top = 53.0
offset_right = 511.0
offset_bottom = 109.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="FOVContainer"]
offset_right = 1022.0
offset_bottom = 36.0
size_flags_vertical = 5
theme_type_variation = &"HeaderMedium"
text = "FOV: 70"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FOVSlider" type="HSlider" parent="FOVContainer"]
offset_top = 40.0
offset_right = 1022.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = 30.0
max_value = 110.0
value = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -90.0
offset_right = 262.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer"]
offset_right = 525.0
offset_bottom = 41.0
theme_override_constants/h_separation = 15
text = "Fullscreen"
alignment = 1

[node name="BorderlessCheckBox" type="CheckBox" parent="VBoxContainer"]
offset_top = 45.0
offset_right = 525.0
offset_bottom = 86.0
theme_override_constants/h_separation = 15
text = "Borderless"
alignment = 1

[node name="WindowSizeContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 90.0
offset_right = 525.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="VBoxContainer/WindowSizeContainer"]
offset_right = 525.0
offset_bottom = 36.0
theme_type_variation = &"HeaderMedium"
text = "Window Size:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/WindowSizeContainer"]
offset_top = 40.0
offset_right = 525.0
offset_bottom = 90.0
theme_override_constants/separation = 25
alignment = 1

[node name="XTextEdit" type="TextEdit" parent="VBoxContainer/WindowSizeContainer/HBoxContainer"]
custom_minimum_size = Vector2i(250, 50)
offset_right = 250.0
offset_bottom = 50.0
size_flags_vertical = 0

[node name="YTextEdit" type="TextEdit" parent="VBoxContainer/WindowSizeContainer/HBoxContainer"]
custom_minimum_size = Vector2i(250, 50)
offset_left = 275.0
offset_right = 525.0
offset_bottom = 50.0
size_flags_vertical = 0

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Apply Settings"
